packages/fasttext_flutter/lib/src/fasttext_flutter_bindings_generated.dart

// Copyright 2024 the fasttext_flutter authors. Apache-2.0 license.
//
// Auto-generated by ffigen from src/fasttext_api.h.
// To regenerate: dart run ffigen --config ffigen.yaml
//
// ignore_for_file: non_constant_identifier_names, camel_case_types,
// avoid_positional_boolean_parameters, annotate_overrides, unused_field,
// unused_element

import 'dart:ffi';

/// Opaque handle type for a native fastText model instance.
final class FastTextHandle extends Opaque {}

@Native<Pointer<FastTextHandle> Function()>(symbol: 'ft_create', isLeaf: true)
external Pointer<FastTextHandle> ft_create();

@Native<Void Function(Pointer<FastTextHandle>)>(
    symbol: 'ft_destroy', isLeaf: true)
external void ft_destroy(Pointer<FastTextHandle> handle);

@Native<
    Int32 Function(Pointer<FastTextHandle>, Pointer<Char>, Pointer<Char>,
        Int32)>(symbol: 'ft_load_model', isLeaf: true)
external int ft_load_model(Pointer<FastTextHandle> handle, Pointer<Char> path,
    Pointer<Char> err, int errLen);

@Native<
    Int32 Function(
        Pointer<FastTextHandle>,
        Pointer<Char>,
        Int32,
        Float,
        Pointer<Pointer<Char>>,
        Pointer<Float>,
        Pointer<Int32>,
        Pointer<Char>,
        Int32)>(symbol: 'ft_predict_k', isLeaf: true)
external int ft_predict_k(
    Pointer<FastTextHandle> handle,
    Pointer<Char> text,
    int k,
    double threshold,
    Pointer<Pointer<Char>> labels,
    Pointer<Float> probs,
    Pointer<Int32> count,
    Pointer<Char> err,
    int errLen);

@Native<
    Int32 Function(
        Pointer<FastTextHandle>,
        Pointer<Char>,
        Pointer<Float>,
        Pointer<Int32>,
        Pointer<Char>,
        Int32)>(symbol: 'ft_get_sentence_vector', isLeaf: true)
external int ft_get_sentence_vector(
    Pointer<FastTextHandle> handle,
    Pointer<Char> text,
    Pointer<Float> out,
    Pointer<Int32> dim,
    Pointer<Char> err,
    int errLen);

@Native<Int32 Function(Pointer<FastTextHandle>)>(
    symbol: 'ft_get_dimension', isLeaf: true)
external int ft_get_dimension(Pointer<FastTextHandle> handle);

@Native<Int32 Function(Pointer<FastTextHandle>)>(
    symbol: 'ft_get_label_count', isLeaf: true)
external int ft_get_label_count(Pointer<FastTextHandle> handle);

@Native<Int32 Function(Pointer<FastTextHandle>)>(
    symbol: 'ft_get_model_type', isLeaf: true)
external int ft_get_model_type(Pointer<FastTextHandle> handle);

@Native<Void Function(Pointer<Pointer<Char>>, Int32)>(
    symbol: 'ft_free_labels', isLeaf: true)
external void ft_free_labels(Pointer<Pointer<Char>> labels, int count);
